fix: Adjust spacing and padding

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,6 +13,7 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  --background-canvas: #0e1312;
 
   --primary-glow: conic-gradient(
     from 180deg at 50% 50%,
@@ -93,12 +94,7 @@ body {
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: var(--background-canvas)
 }
 
 a {
